--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,52 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	font-family: 'Montserrat', sans-serif;
+}
+
+body {
+	overflow-x: hidden;
 }
 
 #header {
-	border-bottom: 1px solid black;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	padding-left: 30px;
+	padding-top: 20px;
+}
+
+.navItems {
+	margin-left: 10vw;
+}
+
+.navItems-item {
+	font-weight: 500;
+	font-size: 1.7rem;
+	margin-right: 2vw;
+	padding-bottom: 5px;
+	transition: ease-in-out 0.3s;
+	color: rgb(108, 123, 255);
+	cursor: pointer;
+}
+
+.navItems-item:hover {
+	/* border-bottom: 1px solid rgb(107, 245, 255); */
+	color: white;
+	text-shadow: 0px -2px 2px rgb(217, 255, 0);
+}
+
+.theLogo {
+	transition: ease-in-out 0.2s;
+}
+
+.theLogo:hover {
+	-webkit-filter: drop-shadow(1px 1px 0 rgb(155, 182, 0))
+                  drop-shadow(-1px -1px 0 rgb(155, 182, 0));
+  filter: drop-shadow(0px 0px 2px rgb(155, 182, 0)) 
+          drop-shadow(0px -1px 1px rgb(155, 182, 0));
+	cursor: pointer;
+}
+
+#ghyt {
+	text-shadow: 2px -2px 5px white;
 }
