--- a/src/styles.css
+++ b/src/styles.css
@@ -22,18 +22,19 @@ body {
 
 .navItems-item {
 	font-weight: 500;
-	font-size: 1.7rem;
+	font-size: 1.8rem;
 	margin-right: 2vw;
 	padding-bottom: 5px;
-	transition: ease-in-out 0.3s;
-	color: rgb(108, 123, 255);
+	transition: ease-in-out 0.2s;
+	color: rgb(138, 134, 196);
 	cursor: pointer;
+	text-shadow: 0px 0px 1px rgb(255, 255, 255);
 }
 
 .navItems-item:hover {
-	/* border-bottom: 1px solid rgb(107, 245, 255); */
-	color: white;
-	text-shadow: 0px -2px 2px rgb(217, 255, 0);
+	/* font-weight: 600; */
+	color: rgb(255, 255, 255);
+	text-shadow: 0px 0px 1px rgb(180, 169, 255);
 }
 
 .theLogo {
