--- a/src/styles.css
+++ b/src/styles.css
@@ -14,6 +14,7 @@ body {
 	align-items: center;
 	padding-left: 30px;
 	padding-top: 20px;
+	position: fixed;
 }
 
 .navItems {
@@ -54,5 +55,9 @@ body {
 }
 
 footer {
-	
+	outline: 2px solid white;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100vw;
 }
