--- a/src/styles.css
+++ b/src/styles.css
@@ -46,9 +46,11 @@ body {
 }
 
 .theLogo:hover {
-  -webkit-filter: drop-shadow(1px 1px 0 white)
+  -webkit-filter:
+    drop-shadow(1px 1px 0 white)
     drop-shadow(-1px -1px 0 white);
-  filter: drop-shadow(0 -1px 1px white)
+  filter:
+    drop-shadow(0 -1px 1px white)
     drop-shadow(0 -1px 1px white);
   cursor: pointer;
 }
@@ -248,7 +250,7 @@ marquee {
 
 #exitCommentsPopup:hover {
   color: rgb(59, 0, 0);
-  text-shadow: 0px 0px 5px rgb(255, 82, 82);
+  text-shadow: 0 0 5px rgb(255, 82, 82);
   font-size: 3.1rem;
 }
 
