--- a/src/styles.css
+++ b/src/styles.css
@@ -243,7 +243,7 @@ marquee {
   right: 50px;
   color: white;
   font-size: 3rem;
-  font-family: 'Michroma', san sans-serif;
+  font-family: 'Michroma', sans-serif;
   transition: 0.2s;
   cursor: pointer;
 }
